Revision history for Gimp-Perl extension.

1.2   Thu May 11 18:55:13 CEST 2000
	- image types updated to reflect gimp's reality.
        - updated perlotine.
        - fixed logulator (bugs are actually in the script-fu parts).
        - moved gimp_drawable_bounds from Gimp::Util to Gimp.
        - applied patch to logulator by <mikem@enet.it>.
        - added examples/giflogo.
        - do not install examples/gap-vcr.
        - added new sethspin, with slight changes.
        - do not install "feedback".
        - updated examples/xachlego.
        - added examples/blended2, examples/translogo.
        - removed examples/giflogo.
        - applied libintl fix by yasuhiro@awa.tohoku.ac.jp.
        - applied save_image/PNG-noextra switch patch by pkaempf@box.echo.ch.
        - applied Perl-Server reuseaddress fix by gphan@webjuice.com.
        - corrected the libintl fix to really work.
        - added fr and ru translations.
        - experimental 5.6 thread compatibility improvements.
        - corrected menu hiliting problem in firetext and glowing_steel.
        - add a call to gimp_plugin_add_domain to Lib.xs.
        - fix some of the bugs Raphael "reported" (missing Gtk makde Gimp::UI
          crash).
        - fix pxgettext call in po/update.sh to use the correct "perl".
        - fix po/Makefile.PL to not barf on multiply defined "translation"
          target.
        - do not install scripts depending on Gtk.
        - do not register menus when Gtk is needed for dialogs.
        - updated examples/burst.
        - fixed various old-syntax leftovers in Gimp::Util.
        - modernized examples/example-fu.
        - added examples/dust.
        - updated po/Makefile.PL to find the scripts again.
        - applied edit_fill change. Boy we need default agruments soon!
	- pxgettext exits with success instead of error on version check,
	  so the build doesn't completely die. (Yosh)
        - fixed examples/image_tile to use die instead of exit.