@@ -1,5 +1,8 @@
 Revision history for Gimp-Perl extension.
 
+        - fixed problem in Net.pm/try_connect (AF_LOCAL vs. PF_UNIX, or
+          "sysv rules the world, but sun shines everyhwere".
+
 1.2   Thu May 11 18:55:13 CEST 2000
 	- image types updated to reflect gimp's reality.
         - updated perlotine.
